[package]
name = "anni-vgmdb"
version = "0.1.3"
authors = ["Yesterday17 <mmf@mmf.moe>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
select = "0.6.0-alpha.1"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
tokio = { version = "1.5.0", features = ["full"] }
