[package]
name = "anni-vgmdb"
description = "A simple VGMdb client."
authors = ["Yesterday17 <mmf@mmf.moe>"]
license = "Apache-2.0"

readme = "Readme.md"
repository = "https://github.com/ProjectAnni/anni-vgmdb"
keywords = ["vgmdb"]

version = "0.2.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
select = "0.6.0-alpha.1"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
tokio = { version = "1.5.0", features = ["full"] }
