[package]
name = "anni-vgmdb"
description = "A simple VGMdb client."
authors = ["Yesterday17 <mmf@mmf.moe>"]
license = "Apache-2.0"

readme = "Readme.md"
repository = "https://github.com/ProjectAnni/anni-vgmdb"
keywords = ["vgmdb"]

version = "0.2.3"
edition = "2021"

[dependencies]
thiserror = "1.0"
select = "0.6.0-alpha.1"

[dependencies.reqwest]
version = "0.11.10"
default-features = false
features = ["rustls-tls"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
